Update development container config

--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,5 @@ tags
 # https://plugins.jetbrains.com/plugin/12206-codestream
 
 # End of https://www.toptal.com/developers/gitignore/api/node,webstorm,intellij,vim,visualstudiocode
+
+.DS_Store
