--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -20,6 +20,11 @@ services:
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
     network_mode: service:db
 
+    environment:
+      - MONGO_USERNAME=accessor
+      - MONGO_PASSWORD=insert-secure-password
+      - MONGO_DATABASE=redirector
+
     # Uncomment the next line to use a non-root user for all processes.
     # user: node
 
@@ -32,11 +37,11 @@ services:
     volumes:
       - mongodb-data:/data/db
 
-    # Uncomment to change startup options
-    # environment:
-    #  MONGO_INITDB_ROOT_USERNAME: root
-    #  MONGO_INITDB_ROOT_PASSWORD: example
-    #  MONGO_INITDB_DATABASE: your-database-here
+    # Be sure these match the vars set in the `app` service
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: accessor
+      MONGO_INITDB_ROOT_PASSWORD: insert-secure-password
+      MONGO_INITDB_DATABASE: redirector
 
     # Add "forwardPorts": ["27017"] to **devcontainer.json** to forward MongoDB locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
