--- a/docs/api_doc.yaml
+++ b/docs/api_doc.yaml
@@ -1,6 +1,6 @@
 openapi: 3.1.0
 info:
-  title: core
+  title: Redirector API
   version: '1.0'
 servers:
   - url: 'http://localhost:3000'
@@ -75,23 +75,6 @@ paths:
                     error: The server failed to process your request
                     errorCode: INTERNAL_SERVER_ERROR
       description: Creates a new Redirect
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                redirect_from:
-                  type: string
-                redirect_to:
-                  type: string
-              required:
-                - redirect_from
-                - redirect_to
-            examples:
-              example-1:
-                value: {}
-        description: The Redirect you wish to create
       security:
         - token: []
   '/api/redirects/{redirect_key}':
