--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -24,7 +24,9 @@ services:
       - MONGO_USERNAME=accessor
       - MONGO_PASSWORD=insert-secure-password
       - MONGO_DATABASE=redirector
-      - APP_PORT=9000
+      - MONGO_HOST=db
+      - HOST_UNDER=/to
+      - APP_PORT=9500
       - API_KEY=enter-your-key-here
 
     # Uncomment the next line to use a non-root user for all processes.
