--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.russ.network/russjr08/redirector"
+    "url": "https://git.omnicron.dev/russjr08/redirector"
   },
   "keywords": [
     "url-shortener",
