Revert "Add entry point to package.json"
This reverts commit 27f28ab8de2100a81799ed0c46ca5493df2d5a2f.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "redirector",
   "version": "1.0.0",
   "description": "A simple url shortener application made with Node",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
